# pytest-isort

./: .editorconfig  .gitignore  .python-version  .travis.yml  CHANGELOG.rst  LICENSE.rst  MANIFEST.in  Makefile  README.rst  pyproject.toml  pytest.ini  pytest_isort.py  setup.py  test_isort.py  tox.ini
.github/workflows/: github-ci.yml  publish-package.yml  release.yml  test.yml
pytest_isort/: __init__.py
tests/: test_plugin.py
