[tool.poetry]
name = "pytest-isort"
version = "3.1.0"
description = "py.test plugin to check import ordering using isort"
authors = [
	"Stephan Jaekel <steph@rdev.info>",
	"Moccu GmbH Co KG <info@moccu.com>",
]
license = "MIT"
readme = "README.rst"
homepage = 'https://github.com/stephrdev/pytest-isort'
repository = 'https://github.com/stephrdev/pytest-isort'
classifiers = [
	"Development Status :: 5 - Production/Stable",
	"License :: OSI Approved :: MIT License",
	"Topic :: Software Development :: Testing",
	"Operating System :: OS Independent",
	"Intended Audience :: Developers",
	"Programming Language :: Python",
	"Programming Language :: Python :: 3",
	"Programming Language :: Python :: 3.7",
	"Programming Language :: Python :: 3.8",
	"Programming Language :: Python :: 3.9",
	"Programming Language :: Python :: 3.10",
	"Framework :: Pytest",
]
packages = [{ include = "pytest_isort" }]
include = ["LICENSE.rst"]

[tool.poetry.plugins.pytest11]
isort = "pytest_isort"

[tool.poetry.dependencies]
python = ">=3.7,<4"
pytest = ">=5.0"
importlib-metadata = {version = "*", python = "<3.8"}

isort = ">=4.0"

[tool.poetry.dev-dependencies]
pytest = ">=6.2"
pytest-flake8 = ">=1.0"
pytest-black = ">=0.3"
flake8 = "4.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 96
skip-string-normalization = true
skip-numeric-underscore-normalization = true
include = "\\.pyi?$"
exclude = "/(\\.git|\\.tox|build|dist)/"
